--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <!-- possible nav with  -->
+    <!-- biography with images -->
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
+      <div id="biography" class="one.column box" style="margin-top: 25%">
         <h4>Basic Page</h4>
         <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
       </div>
     </div>
+    <!-- portfolio w/ links to code projects -->
   </div>
 
 <!-- End Document
