profile picture added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
+  <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Poppins:wght@500&display=swap" rel="stylesheet">
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -32,14 +33,20 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <!-- header -->
+    <header class="one.column box" style="margin-top: 25%">
+      <h1>Title</h1>
+    </header>
     <!-- possible nav with  -->
     <!-- biography with images -->
     <div class="row">
-      <div id="biography" class="one.column box" style="margin-top: 25%">
+      <div id="biography" class="one.column box">
+        <img class="jamey" src="images/j_kirk.jpeg">
         <h4>Basic Page</h4>
         <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
       </div>
     </div>
+    
     <!-- portfolio w/ links to code projects -->
   </div>
 
