--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <title>KirkStarter</title>
+  <meta name="description" content="An Aspiring Coder's Portfolio">
+  <meta name="author" content="Jamey Kirk">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,17 +33,35 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
+    <nav id="navbar"><a href="#biography">biography</a></nav>
+  </div>
+  <div class="container">
     <!-- header -->
-    <header class="one.column box" style="margin-top: 25%">
-      <h1>Title</h1>
-    </header>
     <!-- possible nav with  -->
+    <header class="one.column title" style="margin-top: 25%">
+      <h1>KirkStarter</h1>
+      <h5 style="font-family: 'Libre Franklin', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial, sans-serif;">The journey to becoming a solid coding journeyman starts here.</h5>
+    </header>
     <!-- biography with images -->
     <div class="row">
       <div id="biography" class="one.column box">
         <img class="jamey" src="images/j_kirk.jpeg">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <h4>About</h4>
+        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students, but I'm looking forward to my next step.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div  class="one.column box">
+        <img class="jamey" src="images/j_kirk.jpeg">
+        <h4>About</h4>
+        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students, but I'm looking forward to my next step.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="one.column box">
+        <img class="jamey" src="images/j_kirk.jpeg">
+        <h4>About</h4>
+        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students, but I'm looking forward to my next step.</p>
       </div>
     </div>
     
@@ -53,4 +71,19 @@
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
+
+<script>
+  window.onscroll = function() {myFunction()};
+  
+  var navbar = document.getElementById("navbar");
+  var sticky = navbar.offsetTop;
+  
+  function myFunction() {
+    if (window.pageYOffset >= sticky) {
+      navbar.classList.add("sticky")
+    } else {
+      navbar.classList.remove("sticky");
+    }
+  }
+  </script>
 </html>
