--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Poppins:wght@500&display=swap" rel="stylesheet">
-  <!-- CSS
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;700&family=Poppins:wght@500&display=swap" rel="stylesheet">  <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
@@ -34,7 +33,7 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
+  <!-- Primary Page Layout 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <header class="one.column title" style="margin-top: 25%">
@@ -51,22 +50,42 @@
     <!-- biography with images -->
     <div class="row">
       <div id="biography" class="one.column box">
-        <img class="jamey" src="images/j_kirk.jpeg">
+        <img class="img" src="images/j_kirk.jpeg">
         <h4>bio</h4>
         <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students while I'm looking forward to my next step.</p>
       </div>
     </div>
     <!-- portfolio w/ links to code projects -->
     <div class="row">
-      <div id="work" class="one.column box">
-        <img class="jamey" src="images/j_kirk.jpeg">
+      <div id="work" class="one.column box"> 
+        <img class="github" src="images/GitHub-Mark-120px-plus.png">
         <h4>work</h4>
-        <h5>project 1</h5>
-        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students, but I'm looking forward to my next step.</p>
+        <h5><a href="https://github.com/Jaybird9er/CIS016_12_CalculatorProgram_Pt2" class="project">calculator program</a></h5>
+        <p>A <strong>Java</strong> project in two parts. First the layout was designed in <strong>JavaFX</strong>. Then classes were applied to each button per each function.</p>
         <br>
-        <img class="jamey" src="images/j_kirk.jpeg">
-        <h5>project 2</h5>
-        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students, but I'm looking forward to my next step.</p>
+        <img class="github" src="images/GitHub-Mark-120px-plus.png">
+        <h5><a href="https://github.com/Jaybird9er/CIS014_11_ComputerLab" class="project">Lab Sign-up</a></h5>
+        <p>A <strong>C++</strong> application that allows individual users to log-in and out with their 5 digit ID to reserve a computer at serval labs. User IDs are checked against other IDs listed amongst the multi dimensional array to confirm availablity.</p>
+        <br>
+        <img class="github" src="images/GitHub-Mark-120px-plus.png">
+        <h5><a href="https://github.com/Jaybird9er/960_project" class="project">Git Started on Git</a></h5>
+        <p>A website aimed at beginning coders and progrmmers to help the quickly get acquainted with <strong>Git</strong>. It was an opportunity to utilize the 960 grid system to give myself more time experimenting with layout design in <strong>HTML</strong> and <strong>CSS</strong>. However, after more consideration a new approach is needed for teaching new users on <strong>Git</strong>.</p>
+        <br>
+        <img class="github" src="images/GitHub-Mark-120px-plus.png">
+        <h5><a href="https://github.com/Jaybird9er/CIS112_Assignment6_InputFile" class="project">I/O Files</a></h5>
+        <p>An application created in <strong>Python</strong> to allow users to create, open, and modify files of various types.</p>
+        <br>
+      </div>
+    </div>
+    <div class="row">
+      <div id="ping" class="one.column box">
+        <img class="ping" src="images/contact.png">
+        <h4>ping</h4>
+        <p>I'm eager to hear from you. Reach out and connect.</p>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/jameykirk/">LinkedIn</a></li>
+          <li><a href="mailto:jameykirk@gmail.com">Email</a></li>
+        </ul>
       </div>
     </div>    
   </div>
