--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <!-- <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;700&family=Poppins:wght@500&display=swap" rel="stylesheet">  <!-- CSS
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@500;900&family=Poppins:wght@500&display=swap" rel="stylesheet">  <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
   <!-- JavaScript
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -77,6 +77,7 @@
         <br>
       </div>
     </div>
+    <!-- contact info -->
     <div class="row">
       <div id="ping" class="one.column box">
         <img class="ping" src="images/contact.png">
