fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div id="biography" class="one.column box">
         <img class="img" src="images/j_kirk.jpeg">
         <h4>bio</h4>
-        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack tallent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students while I'm looking forward to my next step.</p>
+        <p>Aspiring to be all things for all needs. In other words, I'm aiming to become a full stack talent with a strong backend background. At the moment, I can be found teaching English in South Korea to university students while I'm looking forward to my next step.</p>
       </div>
     </div>
     <!-- portfolio w/ links to code projects -->
@@ -61,15 +61,15 @@
         <img class="github" src="images/GitHub-Mark-120px-plus.png">
         <h4>work</h4>
         <h5><a href="https://github.com/Jaybird9er/CIS016_12_CalculatorProgram_Pt2" class="project">calculator program</a></h5>
-        <p>A <strong>Java</strong> project in two parts. First the layout was designed in <strong>JavaFX</strong>. Then classes were applied to each button per each function.</p>
+        <p>A <strong>Java</strong> project in two parts. First the layout was designed using <strong>JavaFX</strong>. Then classes were applied to each button per each function.</p>
         <br>
         <img class="github" src="images/GitHub-Mark-120px-plus.png">
         <h5><a href="https://github.com/Jaybird9er/CIS014_11_ComputerLab" class="project">Lab Sign-up</a></h5>
-        <p>A <strong>C++</strong> application that allows individual users to log-in and out with their 5 digit ID to reserve a computer at serval labs. User IDs are checked against other IDs listed amongst the multi dimensional array to confirm availablity.</p>
+        <p>A <strong>C++</strong> application that allows individual users to log in and out with their 5 digit ID to reserve a computer at several labs. User IDs are checked against other IDs listed amongst the multi dimensional array to confirm availablity.</p>
         <br>
         <img class="github" src="images/GitHub-Mark-120px-plus.png">
         <h5><a href="https://github.com/Jaybird9er/960_project" class="project">Git Started on Git</a></h5>
-        <p>A website aimed at beginning coders and progrmmers to help the quickly get acquainted with <strong>Git</strong>. It was an opportunity to utilize the 960 grid system to give myself more time experimenting with layout design in <strong>HTML</strong> and <strong>CSS</strong>. However, after more consideration a new approach is needed for teaching new users on <strong>Git</strong>.</p>
+        <p>A website aimed at beginning coders and programmers to help them quickly get acquainted with <strong>Git</strong>. It was an opportunity to utilize the 960 grid system to give myself more time experimenting with layout design in <strong>HTML</strong> and <strong>CSS</strong>. However, after more consideration, a new approach is needed for teaching new users on <strong>Git</strong>.</p>
         <br>
         <img class="github" src="images/GitHub-Mark-120px-plus.png">
         <h5><a href="https://github.com/Jaybird9er/CIS112_Assignment6_InputFile" class="project">I/O Files</a></h5>
